Add simple updater (Windows only)

--- a/src/app/gui/config/settings/SettingsEditor.fxml
+++ b/src/app/gui/config/settings/SettingsEditor.fxml
@@ -68,8 +68,7 @@
                             <FlowPane GridPane.rowIndex="6" GridPane.columnIndex="1" hgap="10" alignment="CENTER_LEFT">
                                 <!--<Label fx:id="versionLabel" text="%settings.version.getting"/>-->
                                 <StackPane>
-                                    <ProgressIndicator fx:id="versionProgress" prefWidth="25" prefHeight="25"
-                                                       id="customProgressIndicator" visible="false"/>
+                                    <ProgressBar fx:id="versionProgress" visible="false"/>
                                     <Button fx:id="versionActionButton" onAction="#versionAction" text="%settings.update"
                                             visible="true"/>
                                 </StackPane>
